[gd_scene load_steps=2 format=3 uid="uid://bdvb0s1uft6ix"]

[ext_resource type="Script" uid="uid://the5grmgls8d" path="res://scenes/lobby/lobby.gd" id="1_sj1j4"]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource("1_sj1j4")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="LobbyName" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Lobby: 123.123.123.123"
fit_content = true
autowrap_mode = 0

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Playerlist" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/Playerlist"]
layout_mode = 2
text = "ID: 59396"

[node name="StartButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "START GAME"

[node name="LeaveButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "LEAVE"

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/LeaveButton" to="." method="_on_leave_button_pressed"]
